contact.html #5 修正

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
         <section id="location">
             <div class="wrapper">
                 <div class="location-info">
-                    <h3 class="sub-title">カフェ 東駅前店</h3>
+                    <h3 class="sub-title">WCB CAFE 東京駅前店</h3>
                     <p>
                         住所： 東京都〇〇区<br>
                         〇〇〇〇〇〇〇 000-22-1<br>
