modified menu.html #3

--- a/menu.html
+++ b/menu.html
@@ -70,7 +70,7 @@
             </div>
             <div class="item">
                 <img src="images/menu9.jpg" alt="">
-                <p>ミルクレープ</p>
+                <p>ミルククレープ</p>
             </div>
         </div><!-- /.grid -->
 
